product attributes display calculations moved to the controller and view's unified. Imported from Changeset 2893

--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_OnSalePartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_OnSalePartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model WarehouseEcommerce.ViewModels.ProductDetailViewModel
+﻿@model WarehouseEcommerce.ViewModels.ProductViewModel
 <div class="tabpro">
     <div class="tab-head">
         <h1>
