--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_SpecialProductPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_SpecialProductPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Ganedata.Core.Entities.Domain
-@model WarehouseEcommerce.ViewModels.ProductDetailViewModel
+@model WarehouseEcommerce.ViewModels.ProductViewModel
 <div class="left-widgets">
     <div class="tab-head">
         <h1>
