--- a/WarehouseEcommerce/Views/Theme/University/Shared/_SpecialProductPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_SpecialProductPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Ganedata.Core.Entities.Domain
 @using Ganedata.Core.Entities.Enums
-@model WarehouseEcommerce.ViewModels.ProductDetailViewModel
+@model WarehouseEcommerce.ViewModels.ProductViewModel
 @if (Model.productMasterList.Count > 0)
 {
     @Html.Partial("_ProductByAttributeSelectorModal")
