--- a/WMS/Views/Theme/Default/Shared/_AttributeValueCreate.cshtml
+++ b/WMS/Views/Theme/Default/Shared/_AttributeValueCreate.cshtml
@@ -21,6 +21,10 @@
                 </div>
             </div>
         }
+        else
+        {
+            @Html.HiddenFor(m => m.AttributeId);
+        }
         <div class="input-group h-100 justify-content-center align-items-center">
             <label class="col-md-4">Attribute Value<span style="color:red"> *</span></label>
             <div class="col-md-8">
