--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_BestSellerPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_BestSellerPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model WarehouseEcommerce.ViewModels.ProductDetailViewModel
+﻿@model WarehouseEcommerce.ViewModels.ProductViewModel
 <div class="left-widgets">
     <h3 class="left-heading">
         <span>
