--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopProductPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopProductPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model WarehouseEcommerce.ViewModels.ProductDetailViewModel
+﻿@model WarehouseEcommerce.ViewModels.ProductViewModel
 
 <div class="row">
     <div class="col-lg-12">
