--- a/WarehouseEcommerce/Views/Theme/University/Shared/_SpecialProductPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_SpecialProductPartial.cshtml
@@ -7,7 +7,7 @@
     <section class="nb_sec nb_feat_prod_sec feature-product-overflow">
         <div class="container">
             <div class="inside-container">
-                
+
                 @if (!string.IsNullOrEmpty(Model.FeaturedText))
                 {
                     <div class="nb_header_style1">
@@ -50,8 +50,7 @@
                                     @if (item.ProductType != ProductKitTypeEnum.Grouped && item.ProductType != ProductKitTypeEnum.Kit)
                                     {
                                         <ul class="icolist">
-
-                                            @if (item.SellPrice > 0 && item.SellPrice.HasValue && item.ProductType != ProductKitTypeEnum.ProductByAttribute && Ganedata.Core.Services.Inventory.GetStockDetailByProductId(@item.ProductId, ViewBag.SiteId) > 0)
+                                            @if (Ganedata.Core.Services.Inventory.IsProductAvailableToSell(@item, ViewBag.SiteId) && item.ProductType != ProductKitTypeEnum.ProductByAttribute)
                                             {
                                                 <li>
                                                     <a href="javascript:;" onclick="addToCart(@item.ProductId)"><i class="cart-icon icon-shopping-cart"></i></a>
@@ -59,7 +58,7 @@
 
 
                                             }
-                                            else if (@item.SellPrice > 0 && item.SellPrice.HasValue && item.ProductType == ProductKitTypeEnum.ProductByAttribute && Ganedata.Core.Services.Inventory.GetStockDetailByProductId(@item.ProductId, ViewBag.SiteId) > 0)
+                                            else if (Ganedata.Core.Services.Inventory.IsProductAvailableToSell(@item, ViewBag.SiteId) && item.ProductType == ProductKitTypeEnum.ProductByAttribute)
                                             {
                                                 <li>
                                                     <a href="javascript:;" onclick="showProductByAttributeSelector('@item.SKUCode')"><i class="cart-icon icon-shopping-cart"></i></a>
@@ -67,18 +66,18 @@
                                             }
                                             else
                                             {
-                                                var totalwishlistitems = item.WebsiteWishListItems.FirstOrDefault(u => u.IsDeleted != true && u.UserId == ViewBag.CurrentUserId && u.IsNotification);
+                                                var isItemInNotifyList = item.WebsiteWishListItems.Any(u => u.IsDeleted != true && u.UserId == ViewBag.CurrentUserId && u.IsNotification);
 
-                                                if (totalwishlistitems == null)
+                                                if (!isItemInNotifyList)
                                                 {
                                                     <li>
-                                                        <a href="javascript:;" onclick="AddWishListItemStockNotAvailable(@item.ProductId)" class="notification-bell_@item.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="color: black"></i></a>
+                                                        <a href="javascript:;" onclick="@(item.ProductType != ProductKitTypeEnum.ProductByAttribute ? "addNotifyProductAvailibility(" + item.ProductId + ", false)" : "showProductByAttributeSelector('" + item.SKUCode + "')")" class="notification-bell_@item.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="color:black"></i></a>
                                                     </li>
                                                 }
                                                 else
                                                 {
                                                     <li>
-                                                        <a href="javascript:;" onclick="removeNotifyProduct(@item.ProductId, true)" class="notification-bell_@item.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="color: red"></i></a>
+                                                        <a href="javascript:;" onclick="@(item.ProductType != ProductKitTypeEnum.ProductByAttribute ? "removeNotifyProduct(" + item.ProductId + ", true)" : "showProductByAttributeSelector('" + item.SKUCode + "')")" class="notification-bell_@item.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="color:red"></i></a>
                                                     </li>
 
                                                 }
@@ -87,18 +86,19 @@
                                             }
 
                                             @{
-                                                var totaltems = item.WebsiteWishListItems.FirstOrDefault(u => u.IsDeleted != true && u.UserId == ViewBag.CurrentUserId && !u.IsNotification);
+                                                var isItemInWishList = item.WebsiteWishListItems.Any(u => u.IsDeleted != true && u.UserId == ViewBag.CurrentUserId && !u.IsNotification);
                                             }
-                                            @if (totaltems == null)
+
+                                            @if (!isItemInWishList)
                                             {
                                                 <li>
-                                                    <a href="javascript:;" id="wish_@item.ProductId" onclick="AddToWishList(@item.ProductId, false)"><i class="icon-love list-icon" style="color: black; font-size: 28px;"></i></a>
+                                                    <a href="javascript:;" id="wish_@item.ProductId" onclick="@(item.ProductType != ProductKitTypeEnum.ProductByAttribute ? "addToWishList(" + item.ProductId + ", false)" : "showProductByAttributeSelector('" + item.SKUCode + "')")"><i class="icon-love list-icon" style="color: black;font-size: 28px;"></i></a>
                                                 </li>
                                             }
                                             else
                                             {
                                                 <li>
-                                                    <a href="javascript:;" id="wish_@item.ProductId" onclick="RemoveWishListPopUp(@item.ProductId, false)"><i class="icon-love list-icon" style="color: red; font-size: 28px;"></i></a>
+                                                    <a href="javascript:;" id="wish_@item.ProductId" onclick="@(item.ProductType != ProductKitTypeEnum.ProductByAttribute ? "removeFromWishListPopUp(" + item.ProductId + ", false)" : "showProductByAttributeSelector('" + item.SKUCode + "')")"><i class="icon-love list-icon" style="color: red;font-size: 28px;"></i></a>
                                                 </li>
                                             }
                                         </ul>
