fix minor css issues Imported from Changeset 2896

--- a/WarehouseEcommerce/Content/Theme/University/app/css/App.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/App.css
@@ -2195,6 +2195,7 @@ input[type="number"]::-webkit-outer-spin-button {
         align-items: center;
         justify-content: center;
         z-index: 150;
+        display:none;
     }
 
         .nb_prd_viewingsecWrap #zoomViewTrigger i {
