--- a/WarehouseEcommerce/Views/Theme/University/Products/_ProductByAttributeSelector.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_ProductByAttributeSelector.cshtml
@@ -68,7 +68,36 @@
                 </div>
             </div>
         </div>
-
     </div>
-
 </section>
+<div class="modal-footer botomBtnsec" style="padding: 5px 0 0 0">
+    <button type="button" class="btmbtn sho" data-dismiss="modal">
+        Close
+    </button>
+    @if (Ganedata.Core.Services.Inventory.IsProductAvailableToSell(Model.SelectedProduct, ViewBag.SiteId))
+    {
+        <button type="submit" class="btmbtn pro" style="margin-left: 10px; margin-right: 10px;" onclick="addProductByAttributeToCart()">
+            Add To Basket
+        </button>
+    }
+    else
+    {
+        if (!Ganedata.Core.Services.Inventory.IsProductInNotifyList(Model.SelectedProduct, ViewBag.CurrentUserId))
+        {
+            <button class="btmbtn sho" onclick="addNotifyProductAvailibility(@Model.SelectedProduct.ProductId, @Model.BaseProductId)" id="notification-bell_@Model.SelectedProduct.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="font-size: 28px;"></i></button>
+        }
+        else
+        {
+            <button class="btmbtn sho" onclick="removeNotifyProduct(@Model.SelectedProduct.ProductId, @Model.BaseProductId)" id="notification-bell_@Model.SelectedProduct.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="color:red; font-size: 28px;"></i></button>
+        }
+    }
+
+    @if (!Ganedata.Core.Services.Inventory.IsProductInWishList(Model.SelectedProduct, ViewBag.CurrentUserId))
+    {
+        <button class="btmbtn sho" id="wish_@Model.SelectedProduct.ProductId" onclick="addToWishList(@Model.SelectedProduct.ProductId, @Model.BaseProductId)"><i class="icon-love list-icon" style="font-size: 28px;"></i></button>
+    }
+    else
+    {
+        <button class="btmbtn sho" id="wish_@Model.SelectedProduct.ProductId" onclick="removeFromWishListPopUp(@Model.SelectedProduct.ProductId, @Model.BaseProductId)"><i class="icon-love list-icon" style="color: red;font-size: 28px;"></i></button>
+    }
+</div>
